<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="168dp"
                android:layout_height="158dp"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="number" />

        <EditText
            android:id="@+id/etFavorito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/favorito"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registro"
            android:text="@string/registrar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>