<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <ImageView
            android:id="@+id/ivPerfil"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="117dp"
                android:layout_height="102dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="411dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tvNombres"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/nombres"
                    android:textColor="#040404"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/apellidos"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/correo"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCelular"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/celular"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFavorito"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/favorito"
                    android:textColor="#020202"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>